// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleCard should render with a eventType name, target name, filter passthrow and skip execution enable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-369 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-370"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-379 makeStyles-ruleCardAvatarOrange-383 MuiAvatar-colorDefault"
        >
          T
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 2
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-371"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-372"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-373 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-374 MuiTypography-body1"
        >
          EventType 2-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-372"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-373 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-374 MuiTypography-body1"
        >
          Target 2-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-375"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-373 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="filter expression passthrow"
          >
            <p
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionPassthrow-492 MuiTypography-body1"
            >
              PASSTHROW
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-376"
      >
        <div
          class="makeStyles-ruleCardStatusDate-377"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-378"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives enable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-518 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-519 Mui-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-521 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a eventType name, target name, filters and skip execution disable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-185 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-186"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-195 makeStyles-ruleCardAvatarPurple-198 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-187"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-188"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-189 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-190 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-188"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-189 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-190 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-191"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-189 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-305"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-306"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-307 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-312"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-309 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-310 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-311 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-305"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-306"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-307 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-312"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-309 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-310 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-311 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-312"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-309 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-310 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-311 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-192"
      >
        <div
          class="makeStyles-ruleCardStatusDate-193"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-194"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-334 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-337 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a rule and snap 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-2"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-11 makeStyles-ruleCardAvatarPurple-14 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-3"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-7"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-121"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-122"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-123 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-128"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-125 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-126 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-127 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-121"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-122"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-123 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-128"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-125 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-126 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-127 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-128"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-125 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-126 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-127 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-8"
      >
        <div
          class="makeStyles-ruleCardStatusDate-9"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-10"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-150 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-153 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
